--- a/edge_cli/Cargo.toml
+++ b/edge_cli/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.36", features = ["derive"] }
 edgelib = { path = "../edgelib" }
+num-bigint = "0.4.6"
+num-traits = "0.2.19"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
